Fix for defaultValues not showing up on direct page navigation

--- a/src/pages/Projects/components/ProjectDescription/ProjectDescription.module.scss
+++ b/src/pages/Projects/components/ProjectDescription/ProjectDescription.module.scss
@@ -28,7 +28,6 @@
     height: auto;
     height: 75px;
     resize: none;
-    outline: none;
     font-size: 18px;
     font-family: inherit;
   }
